trabalho 6/codigos/sintatico.automaton
State 0:
programa' -> . programa [ # ]
-- On FUNCTION shift to state 1
-- On programa shift to state 122
-- On list(declaracao_de_funcao) shift to state 123
-- On declaracao_de_funcao shift to state 126
-- On WHILE reduce production list(declaracao_de_funcao) -> 
-- On RETURN reduce production list(declaracao_de_funcao) -> 
-- On OUTPUT reduce production list(declaracao_de_funcao) -> 
-- On NOT reduce production list(declaracao_de_funcao) -> 
-- On LITSTRING reduce production list(declaracao_de_funcao) -> 
-- On LITINT reduce production list(declaracao_de_funcao) -> 
-- On LITFLOAT reduce production list(declaracao_de_funcao) -> 
-- On INPUT reduce production list(declaracao_de_funcao) -> 
-- On IF reduce production list(declaracao_de_funcao) -> 
-- On ID reduce production list(declaracao_de_funcao) -> 
-- On FOR reduce production list(declaracao_de_funcao) -> 
-- On EOF reduce production list(declaracao_de_funcao) -> 
-- On BOOL reduce production list(declaracao_de_funcao) -> 
-- On APAR reduce production list(declaracao_de_funcao) -> 

State 1:
declaracao_de_funcao -> FUNCTION . ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR tipo list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On ID shift to state 2

State 2:
declaracao_de_funcao -> FUNCTION ID . APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR tipo list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On APAR shift to state 3

State 3:
declaracao_de_funcao -> FUNCTION ID APAR . loption(separated_nonempty_list(VIRG,parametro)) FPAR tipo list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On ID shift to state 4
-- On separated_nonempty_list(VIRG,parametro) shift to state 12
-- On parametro shift to state 13
-- On loption(separated_nonempty_list(VIRG,parametro)) shift to state 16
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> 

State 4:
parametro -> ID . tipo [ VIRG FPAR ]
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On BOOLEANO shift to state 9
-- On tipo_simples shift to state 10
-- On tipo shift to state 11

State 5:
tipo_simples -> VOID . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo_simples -> VOID 
-- On VOID reduce production tipo_simples -> VOID 
-- On VIRG reduce production tipo_simples -> VOID 
-- On STRING reduce production tipo_simples -> VOID 
-- On RETURN reduce production tipo_simples -> VOID 
-- On OUTPUT reduce production tipo_simples -> VOID 
-- On NOT reduce production tipo_simples -> VOID 
-- On LITSTRING reduce production tipo_simples -> VOID 
-- On LITINT reduce production tipo_simples -> VOID 
-- On LITFLOAT reduce production tipo_simples -> VOID 
-- On INT reduce production tipo_simples -> VOID 
-- On INPUT reduce production tipo_simples -> VOID 
-- On IF reduce production tipo_simples -> VOID 
-- On ID reduce production tipo_simples -> VOID 
-- On FPAR reduce production tipo_simples -> VOID 
-- On FOR reduce production tipo_simples -> VOID 
-- On FLOAT reduce production tipo_simples -> VOID 
-- On END reduce production tipo_simples -> VOID 
-- On BOOLEANO reduce production tipo_simples -> VOID 
-- On BOOL reduce production tipo_simples -> VOID 
-- On APAR reduce production tipo_simples -> VOID 

State 6:
tipo_simples -> STRING . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo_simples -> STRING 
-- On VOID reduce production tipo_simples -> STRING 
-- On VIRG reduce production tipo_simples -> STRING 
-- On STRING reduce production tipo_simples -> STRING 
-- On RETURN reduce production tipo_simples -> STRING 
-- On OUTPUT reduce production tipo_simples -> STRING 
-- On NOT reduce production tipo_simples -> STRING 
-- On LITSTRING reduce production tipo_simples -> STRING 
-- On LITINT reduce production tipo_simples -> STRING 
-- On LITFLOAT reduce production tipo_simples -> STRING 
-- On INT reduce production tipo_simples -> STRING 
-- On INPUT reduce production tipo_simples -> STRING 
-- On IF reduce production tipo_simples -> STRING 
-- On ID reduce production tipo_simples -> STRING 
-- On FPAR reduce production tipo_simples -> STRING 
-- On FOR reduce production tipo_simples -> STRING 
-- On FLOAT reduce production tipo_simples -> STRING 
-- On END reduce production tipo_simples -> STRING 
-- On BOOLEANO reduce production tipo_simples -> STRING 
-- On BOOL reduce production tipo_simples -> STRING 
-- On APAR reduce production tipo_simples -> STRING 

State 7:
tipo_simples -> INT . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo_simples -> INT 
-- On VOID reduce production tipo_simples -> INT 
-- On VIRG reduce production tipo_simples -> INT 
-- On STRING reduce production tipo_simples -> INT 
-- On RETURN reduce production tipo_simples -> INT 
-- On OUTPUT reduce production tipo_simples -> INT 
-- On NOT reduce production tipo_simples -> INT 
-- On LITSTRING reduce production tipo_simples -> INT 
-- On LITINT reduce production tipo_simples -> INT 
-- On LITFLOAT reduce production tipo_simples -> INT 
-- On INT reduce production tipo_simples -> INT 
-- On INPUT reduce production tipo_simples -> INT 
-- On IF reduce production tipo_simples -> INT 
-- On ID reduce production tipo_simples -> INT 
-- On FPAR reduce production tipo_simples -> INT 
-- On FOR reduce production tipo_simples -> INT 
-- On FLOAT reduce production tipo_simples -> INT 
-- On END reduce production tipo_simples -> INT 
-- On BOOLEANO reduce production tipo_simples -> INT 
-- On BOOL reduce production tipo_simples -> INT 
-- On APAR reduce production tipo_simples -> INT 

State 8:
tipo_simples -> FLOAT . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo_simples -> FLOAT 
-- On VOID reduce production tipo_simples -> FLOAT 
-- On VIRG reduce production tipo_simples -> FLOAT 
-- On STRING reduce production tipo_simples -> FLOAT 
-- On RETURN reduce production tipo_simples -> FLOAT 
-- On OUTPUT reduce production tipo_simples -> FLOAT 
-- On NOT reduce production tipo_simples -> FLOAT 
-- On LITSTRING reduce production tipo_simples -> FLOAT 
-- On LITINT reduce production tipo_simples -> FLOAT 
-- On LITFLOAT reduce production tipo_simples -> FLOAT 
-- On INT reduce production tipo_simples -> FLOAT 
-- On INPUT reduce production tipo_simples -> FLOAT 
-- On IF reduce production tipo_simples -> FLOAT 
-- On ID reduce production tipo_simples -> FLOAT 
-- On FPAR reduce production tipo_simples -> FLOAT 
-- On FOR reduce production tipo_simples -> FLOAT 
-- On FLOAT reduce production tipo_simples -> FLOAT 
-- On END reduce production tipo_simples -> FLOAT 
-- On BOOLEANO reduce production tipo_simples -> FLOAT 
-- On BOOL reduce production tipo_simples -> FLOAT 
-- On APAR reduce production tipo_simples -> FLOAT 

State 9:
tipo_simples -> BOOLEANO . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo_simples -> BOOLEANO 
-- On VOID reduce production tipo_simples -> BOOLEANO 
-- On VIRG reduce production tipo_simples -> BOOLEANO 
-- On STRING reduce production tipo_simples -> BOOLEANO 
-- On RETURN reduce production tipo_simples -> BOOLEANO 
-- On OUTPUT reduce production tipo_simples -> BOOLEANO 
-- On NOT reduce production tipo_simples -> BOOLEANO 
-- On LITSTRING reduce production tipo_simples -> BOOLEANO 
-- On LITINT reduce production tipo_simples -> BOOLEANO 
-- On LITFLOAT reduce production tipo_simples -> BOOLEANO 
-- On INT reduce production tipo_simples -> BOOLEANO 
-- On INPUT reduce production tipo_simples -> BOOLEANO 
-- On IF reduce production tipo_simples -> BOOLEANO 
-- On ID reduce production tipo_simples -> BOOLEANO 
-- On FPAR reduce production tipo_simples -> BOOLEANO 
-- On FOR reduce production tipo_simples -> BOOLEANO 
-- On FLOAT reduce production tipo_simples -> BOOLEANO 
-- On END reduce production tipo_simples -> BOOLEANO 
-- On BOOLEANO reduce production tipo_simples -> BOOLEANO 
-- On BOOL reduce production tipo_simples -> BOOLEANO 
-- On APAR reduce production tipo_simples -> BOOLEANO 

State 10:
tipo -> tipo_simples . [ WHILE VOID VIRG STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FPAR FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production tipo -> tipo_simples 
-- On VOID reduce production tipo -> tipo_simples 
-- On VIRG reduce production tipo -> tipo_simples 
-- On STRING reduce production tipo -> tipo_simples 
-- On RETURN reduce production tipo -> tipo_simples 
-- On OUTPUT reduce production tipo -> tipo_simples 
-- On NOT reduce production tipo -> tipo_simples 
-- On LITSTRING reduce production tipo -> tipo_simples 
-- On LITINT reduce production tipo -> tipo_simples 
-- On LITFLOAT reduce production tipo -> tipo_simples 
-- On INT reduce production tipo -> tipo_simples 
-- On INPUT reduce production tipo -> tipo_simples 
-- On IF reduce production tipo -> tipo_simples 
-- On ID reduce production tipo -> tipo_simples 
-- On FPAR reduce production tipo -> tipo_simples 
-- On FOR reduce production tipo -> tipo_simples 
-- On FLOAT reduce production tipo -> tipo_simples 
-- On END reduce production tipo -> tipo_simples 
-- On BOOLEANO reduce production tipo -> tipo_simples 
-- On BOOL reduce production tipo -> tipo_simples 
-- On APAR reduce production tipo -> tipo_simples 

State 11:
parametro -> ID tipo . [ VIRG FPAR ]
-- On VIRG reduce production parametro -> ID tipo 
-- On FPAR reduce production parametro -> ID tipo 

State 12:
loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) . [ FPAR ]
-- On FPAR reduce production loption(separated_nonempty_list(VIRG,parametro)) -> separated_nonempty_list(VIRG,parametro) 

State 13:
separated_nonempty_list(VIRG,parametro) -> parametro . [ FPAR ]
separated_nonempty_list(VIRG,parametro) -> parametro . VIRG separated_nonempty_list(VIRG,parametro) [ FPAR ]
-- On VIRG shift to state 14
-- On FPAR reduce production separated_nonempty_list(VIRG,parametro) -> parametro 

State 14:
separated_nonempty_list(VIRG,parametro) -> parametro VIRG . separated_nonempty_list(VIRG,parametro) [ FPAR ]
-- On ID shift to state 4
-- On separated_nonempty_list(VIRG,parametro) shift to state 15
-- On parametro shift to state 13

State 15:
separated_nonempty_list(VIRG,parametro) -> parametro VIRG separated_nonempty_list(VIRG,parametro) . [ FPAR ]
-- On FPAR reduce production separated_nonempty_list(VIRG,parametro) -> parametro VIRG separated_nonempty_list(VIRG,parametro) 

State 16:
declaracao_de_funcao -> FUNCTION ID APAR loption(separated_nonempty_list(VIRG,parametro)) . FPAR tipo list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On FPAR shift to state 17

State 17:
declaracao_de_funcao -> FUNCTION ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR . tipo list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On BOOLEANO shift to state 9
-- On tipo_simples shift to state 10
-- On tipo shift to state 18

State 18:
declaracao_de_funcao -> FUNCTION ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR tipo . list(declaracao_de_variavel) list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On VOID shift to state 5
-- On STRING shift to state 6
-- On INT shift to state 7
-- On FLOAT shift to state 8
-- On BOOLEANO shift to state 9
-- On tipo_simples shift to state 10
-- On tipo shift to state 19
-- On list(declaracao_de_variavel) shift to state 24
-- On declaracao_de_variavel shift to state 120
-- On WHILE reduce production list(declaracao_de_variavel) -> 
-- On RETURN reduce production list(declaracao_de_variavel) -> 
-- On OUTPUT reduce production list(declaracao_de_variavel) -> 
-- On NOT reduce production list(declaracao_de_variavel) -> 
-- On LITSTRING reduce production list(declaracao_de_variavel) -> 
-- On LITINT reduce production list(declaracao_de_variavel) -> 
-- On LITFLOAT reduce production list(declaracao_de_variavel) -> 
-- On INPUT reduce production list(declaracao_de_variavel) -> 
-- On IF reduce production list(declaracao_de_variavel) -> 
-- On ID reduce production list(declaracao_de_variavel) -> 
-- On FOR reduce production list(declaracao_de_variavel) -> 
-- On END reduce production list(declaracao_de_variavel) -> 
-- On BOOL reduce production list(declaracao_de_variavel) -> 
-- On APAR reduce production list(declaracao_de_variavel) -> 

State 19:
declaracao_de_variavel -> tipo . separated_nonempty_list(VIRG,ID) [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
-- On ID shift to state 20
-- On separated_nonempty_list(VIRG,ID) shift to state 23

State 20:
separated_nonempty_list(VIRG,ID) -> ID . [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
separated_nonempty_list(VIRG,ID) -> ID . VIRG separated_nonempty_list(VIRG,ID) [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
-- On VIRG shift to state 21
-- On WHILE reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On VOID reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On STRING reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On RETURN reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On OUTPUT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On NOT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On LITSTRING reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On LITINT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On LITFLOAT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On INT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On INPUT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On IF reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On ID reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On FOR reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On FLOAT reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On END reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On BOOLEANO reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On BOOL reduce production separated_nonempty_list(VIRG,ID) -> ID 
-- On APAR reduce production separated_nonempty_list(VIRG,ID) -> ID 

State 21:
separated_nonempty_list(VIRG,ID) -> ID VIRG . separated_nonempty_list(VIRG,ID) [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
-- On ID shift to state 20
-- On separated_nonempty_list(VIRG,ID) shift to state 22

State 22:
separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) . [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On VOID reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On STRING reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On RETURN reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On OUTPUT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On NOT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On LITSTRING reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On LITINT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On LITFLOAT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On INT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On INPUT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On IF reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On ID reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On FOR reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On FLOAT reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On END reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On BOOLEANO reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On BOOL reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 
-- On APAR reduce production separated_nonempty_list(VIRG,ID) -> ID VIRG separated_nonempty_list(VIRG,ID) 

State 23:
declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) . [ WHILE VOID STRING RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INT INPUT IF ID FOR FLOAT END BOOLEANO BOOL APAR ]
-- On WHILE reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On VOID reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On STRING reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On RETURN reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On OUTPUT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On NOT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On LITSTRING reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On LITINT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On LITFLOAT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On INT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On INPUT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On IF reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On ID reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On FOR reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On FLOAT reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On END reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On BOOLEANO reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On BOOL reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 
-- On APAR reduce production declaracao_de_variavel -> tipo separated_nonempty_list(VIRG,ID) 

State 24:
declaracao_de_funcao -> FUNCTION ID APAR loption(separated_nonempty_list(VIRG,parametro)) FPAR tipo list(declaracao_de_variavel) . list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FUNCTION FOR EOF BOOL APAR ]
-- On WHILE shift to state 25
-- On RETURN shift to state 71
-- On OUTPUT shift to state 74
-- On NOT shift to state 26
-- On LITSTRING shift to state 27
-- On LITINT shift to state 28
-- On LITFLOAT shift to state 29
-- On IF shift to state 78
-- On ID shift to state 30
-- On FOR shift to state 81
-- On BOOL shift to state 32
-- On APAR shift to state 33
-- On variavel shift to state 93
-- On separated_nonempty_list(VIRG,expressao) shift to state 62
-- On loption(separated_nonempty_list(VIRG,expressao)) shift to state 94
-- On list(comando) shift to state 118
-- On expressaoAtrib shift to state 84
-- On expressao shift to state 65
-- On comando_While shift to state 98
-- On comando_Se shift to state 99
-- On comando_Retorno shift to state 100
-- On comando_Output shift to state 101
-- On comando_Input shift to state 102
-- On comando_For shift to state 103
-- On comando_Chamada shift to state 104
-- On comando_Atribuicao shift to state 105
-- On comando shift to state 106
-- On chamada shift to state 108
-- On INPUT reduce production loption(separated_nonempty_list(VIRG,expressao)) -> 
-- On END reduce production list(comando) -> 

State 25:
comando_While -> WHILE . expressao DO list(comando) END [ WHILE RETURN OUTPUT NOT LITSTRING LITINT LITFLOAT INPUT IF ID FOR EOF END ELSE BOOL APAR ]
-- On NOT shift to state 26
-- On LITSTRING shift to state 27
-- On LITINT shift to state 28
-- On LITFLOAT shift to state 29
-- On ID shift to state 30
-- On BOOL shift to state 32
-- On APAR shift to state 33
-- On variavel shift to state 34
-- On expressao shift to state 69
-- On chamada shift to state 40

State 26:
expressao -> NOT . expressao [ WHILE VIRG THEN RETURN OUTPUT OULOG NOT MULTI MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT INPUT IGUAL IF ID FPAR FOR EOF END ELSE ELOG DO DIVI DIF BOOL APAR ]
-- On NOT shift to state 26
-- On LITSTRING shift to state 27
-- On LITINT shift to state 28
-- On LITFLOAT shift to state 29
-- On ID shift to state 30
-- On BOOL shift to state 32
-- On APAR shift to state 33
-- On variavel shift to state 34
-- On expressao shift to state 68
-- On chamada shift to state 40

State 27:
expressao -> LITSTRING . [ WHILE VIRG THEN RETURN OUTPUT OULOG NOT MULTI MENOS MENORIGUAL MENOR MAIS MAIORIGUAL MAIOR LITSTRING LITINT LITFLOAT INPUT IGUAL IF ID FPAR FOR EOF END ELSE ELOG DO DIVI DIF BOOL APAR ]
-- On WHILE reduce production expressao -> LITSTRING 
-- On VIRG reduce production expressao -> LITSTRING 
-- On THEN reduce production expressao -> LITSTRING 
-- On RETURN reduce production expressao -> LITSTRING 
-- On OUTPUT reduce production expressao -> LITSTRING 
-- On OULOG reduce production expressao -> LITSTRING 
-- On NOT reduce production expressao -> LITSTRING 
-- On MULTI reduce production expressao -> LITSTRING 
-- On MENOS reduce production expressao -> LITSTRING 
-- On MENORIGUAL reduce production expressao -> LITSTRING 
-- On MENOR reduce production expressao -> LITSTRING 
-- On MAIS reduce production expressao -> LITSTRING 
-- On MAIORIGUAL reduce production expressao -> LITSTRING 
-- On MAIOR reduce production expressao -> LITSTRING 
-- On LITSTRING reduce production expressao -> LITSTRING 
-- On LITINT reduce production expressao -> LITSTRING 
-- On LITFLOAT reduce production expressao -> LITSTRING 
-- On INPUT reduce production expressao -> LITSTRING 
-- On IGUAL reduce production expressao -> LITSTRING 
-- On IF reduce production expressao -> LITSTRING 
-- On ID reduce production expressao -> LITSTRING 
-- On FPAR reduce production expressao -> LITSTRING 
-- On FOR reduce production expressao -> LITSTRING 
-- On EOF reduce production expressao -> LITSTRING 
-- On END reduce production expressao -> LITSTRING 
-- On ELSE reduce production expressao -> LITSTRING 
-- On ELOG reduce production expressao -> LITSTRING 
-- On DO reduce production expressao -> LITSTRING 
-- On DIVI reduce production expressao -> LITSTRING 
-- On DIF reduce production expressao -> LITSTRING 
-- On BOOL reduce production expressao -> LITSTRING 
-- On APAR reduce production expressao -> LITSTRING 
